# pipeasio

./: .clang-format  .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  pages.yml  release.yml
cmake/: WineDLL.cmake
docs/: index.html  robots.txt  sitemap.xml
gui/: CMakeLists.txt  Config.cpp  Config.hpp  DeviceEnumerator.cpp  DeviceEnumerator.hpp  LoadHistogram.cpp  LoadHistogram.hpp  Makefile  PipeWireMonitor.cpp  PipeWireMonitor.hpp  SettingsDialog.cpp  SettingsDialog.hpp  main.cpp  settings.py  settings.ui  ui_settings.py
include/: audio.h  pipeasio_config.h  pipeasio_offsets.h
src/: asio.c  audio.c  config.c  main.c  regsvr.c
src/wow64/: audio_unix.c
tests/asio_loopback/: CMakeLists.txt  asio_loopback.c  run.sh
tests/asio_probe/: CMakeLists.txt  asio_probe.c  gdb.sh  run.sh  run32.sh
tests/gui/: CMakeLists.txt  test_panel.cpp
tests/pw_probe/: CMakeLists.txt  pw_default_probe.c  pw_delivery_probe.c  pw_filter_probe.c
tests/unit/: CMakeLists.txt  test_config.c  test_helpers.h  test_offsets.c
